# osx-system-tray

./: Cargo.toml
examples/: show_icon.rs
src/: lib.rs
