[package]
name = "osx-system-tray"
version = "0.1.0"
authors = ["ahmed korim <ahmedkorrim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = "0.2.7"
libc = "0.2.76"
cocoa = "0.23.0"
thiserror = "1.0"
bincode="1.3.1"
serde = { version = "1.0", features = ["derive"] }
image="0.23.8"
raster="0.2.0"
